<resources>
    <string name="app_name" translatable="false">ALOLINE</string>
    <string name="title_activity_bubble" translatable="false">BubbleActivity</string>
    <string name="app_name_custom" translatable="false">Alo Line</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_base" translatable="false">BaseActivity</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_demo" translatable="false">DemoActivity</string>
    <string name="input_name" translatable="false">Tên </string>
    <string name="address" translatable="false">Địa chỉ</string>
    <string name="input_phone" translatable="false">Điện thoại</string>
    <string name="continuee" translatable="false">Tiếp tục</string>
    <string name="conform" translatable="false">Xác nhận</string>
    <string name="login_label_slogan" translatable="false">Mạng xã hội kết nối ngành F&amp;B - khách hàng</string>
    <string name="login_label_login_as_facebook" translatable="false">Đăng nhập bằng Facebook</string>
    <string name="login_label_login_as_google" translatable="false">Đăng nhập bằng Google</string>
    <string name="login_label_login_as_phone_number" translatable="false">Đăng nhập bằng số điện thoại</string>
    <string name="login_label_login_success" translatable="false">Đăng nhập thành công</string>
    <string name="login_label_password" translatable="false">Mật khẩu</string>
    <string name="login_label_phone_must_not_be_empty" translatable="false">Số điện thoại không được để trống</string>
    <string name="login_label_password_must_not_be_empty" translatable="false">Mật khẩu không được để trống</string>
    <string name="login_label_phone_number" translatable="false">Số điện thoại</string>
    <string name="login_label_register" translatable="false">Chưa có tài khoản?&lt;b&gt; Đăng ký&lt;/b&gt;</string>
    <string name="login_require" translatable="false">Bạn phải đăng nhập để thực hiện chức năng này</string>
    <string name="logtin_type_label_phone_number_exist" translatable="false">Số điện thoại đã tồn tại</string>
    <string name="login_label_login" translatable="false">Đăng nhập</string>
    <string name="register_lable_register" translatable="false">Đăng ký</string>
    <string name="register_now" translatable="false">Đăng ký ngay</string>
    <string name="login_label_forgot_password" translatable="false">Quên mật khẩu?</string>
    <string name="Free" translatable="false">Miễn phí</string>
    <string name="Sale" translatable="false">-40%</string>
    <string name="Tiger_Sugar_Delivery" translatable="false">[Tiger_Sugar_Delivery] Giảm 40% toàn menu</string>
    <string name="nation" translatable="false">Quốc gia</string>
    <string name="country" translatable="false">Tiếng Việt - Tiếng Việt</string>
    <string name="Lang" translatable="false">Ngôn ngữ</string>
    <string name="notification_settings" translatable="false">Cài đặt thông báo</string>
    <string name="change_password" translatable="false">Thay đổi mật khẩu</string>
    <string name="disable_account" translatable="false">Xoá tài khoản</string>
    <string name="logout" translatable="false">Đăng xuất</string>
    <string name="setting" translatable="false">Cài đặt</string>
    <string name="back_again" translatable="false">Nhấn 1 lần nữa để thoát khỏi ALO LINE</string>
    <string name="title_order" translatable="false">Đơn hàng</string>
    <string name="title_home_page" translatable="false">Trang chủ</string>
    <string name="title_review" translatable="false">Review</string>
    <string name="title_message" translatable="false">Tin Nhắn</string>
    <string name="title_inbox" translatable="false">Thông báo</string>
    <string name="title_account" translatable="false">Tài khoản</string>
    <string name="make_friend" translatable="false">Kết bạn</string>
    <string name="sent_friend" translatable="false">Đã gửi lời mời</string>
    <string name="friend_request" translatable="false">Lời mời kết bạn</string>
    <string name="livestream_comment_share" translatable="false">Chia sẻ</string>
    <string name="livestream_text_message_hint" translatable="false">Bình luận</string>
    <string name="account_name" translatable="false">Kelvin Nguyen</string>
    <string name="view_activity" translatable="false">Thông tin</string>
    <string name="membership_code" translatable="false">Mã của tôi</string>
    <string name="login_method" translatable="false">Phương thức đăng nhập</string>
    <string name="recommend_to_friends" translatable="false">Giới thiệu cho bạn bè</string>
    <string name="registry_advertisement" translatable="false">Đăng ký chạy quảng cáo</string>
    <string name="history_advertisement" translatable="false">Lịch sử chạy quảng cáo</string>
    <string name="manager_advertisement" translatable="false">Quản lý quảng cáo</string>
    <string name="reservation_information" translatable="false">Thông tin đặt chỗ</string>
    <string name="manage_orders" translatable="false">Quản lý đơn hàng</string>
    <string name="coupon_code" translatable="false">Mã giảm giá</string>
    <string name="favorite_restaurant" translatable="false">Nhà hàng yêu thích</string>
    <string name="looking_for_friends" translatable="false">Tìm kiếm bạn bè</string>
    <string name="privacy_policy" translatable="false">Chính sách bảo mật</string>
    <string name="terms_use" translatable="false">Điều khoản sử dụng</string>
    <string name="app_reviews" translatable="false">Đánh giá ứng dụng</string>
    <string name="suggestions_for_developers" translatable="false">Góp ý cho nhà phát triển</string>
    <string name="product_information" translatable="false">Thông tin phần mềm</string>
    <string name="hello" translatable="false">Chào mừng bạn quay trở lại</string>
    <string name="mylogin" translatable="false">Đăng nhập bằng tài khoản của bạn</string>
    <string name="newfeed" translatable="false">Có gì mới?</string>
    <string name="promotion" translatable="false">Ưu đãi</string>
    <string name="namenewfeed" translatable="false">Phạm Văn Nhân</string>
    <string name="datenewfeed" translatable="false">29/02/2020 3:15</string>
    <string name="tcfh" translatable="false">THE COFFEE HOUSE</string>
    <string name="review" translatable="false">Đánh giá</string>
    <string name="note_address" translatable="false">359 Hém 445, Phước Long B, Quận 9, Hồ Chí Minh 359 Hém 445, Phước Long B, Quận 9, Hồ Chí Minh 359 Hém 445, Phước Long B, Quận 9, Hồ Chí Minh</string>
    <string name="like" translatable="false">Thích</string>
    <string name="comment" translatable="false">Bình luận</string>
    <string name="Share" translatable="false">Share</string>
    <string name="like1" translatable="false">thích</string>
    <string name="comment1" translatable="false">bình luận</string>
    <string name="Share1" translatable="false">Share</string>
    <string name="new1" translatable="false">Mới nhất</string>
    <string name="textnew" translatable="false">GIẢM 30% DUY NHẤT VÀO THỨ 4</string>
    <string name="km" translatable="false">1.15Km</string>
    <string name="typerestaurant" translatable="false">LOẠI HÌNH NHÀ HÀNG</string>
    <string name="refreshingcoffee" translatable="false">Café giải khác</string>
    <string name="buffet" translatable="false">Buffet</string>
    <string name="ricestore" translatable="false">Quán cơm</string>
    <string name="luxurious" translatable="false">Sang trọng</string>
    <string name="seafoodrestaurant" translatable="false">Nhà hàng đặc sản</string>
    <string name="pubs" translatable="false">Quán bia, rựu, nhậu</string>
    <string name="barclub" translatable="false">Bar/Pub/Club</string>
    <string name="breakfastbar" translatable="false">Quán ăn sáng/ăn vặt</string>
    <string name="createboking" translatable="false">THÊM ĐẶT CHỖ</string>
    <string name="date" translatable="false">Ngày đến</string>
    <string name="title_time" translatable="false">_ : _</string>
    <string name="datecreatebooking" translatable="false">_ / _ / _</string>
    <string name="number" translatable="false">Số người:</string>
    <string name="arrivaltime" translatable="false">Giờ đến</string>
    <string name="feedback" translatable="false">Góp ý</string>
    <string name="request" translatable="false">Yêu cầu khác:</string>
    <string name="input_request" translatable="false">Bạn có cần trang trí những gì cho buổi tiệc của mình không?</string>
    <string name="booking" translatable="false">ĐẶT CHỖ</string>
    <string name="zero" translatable="false">0</string>
    <string name="title_price" translatable="false">18000000</string>
    <string name="title_seller_name" translatable="false">anh tuan</string>
    <string name="title_accept" translatable="false">Xác nhận</string>
    <string name="hours_order" translatable="false">14:46</string>
    <string name="title_code_orders" translatable="false">FUN0002</string>
    <string name="title_order_status" translatable="false">Chờ giao hàng</string>
    <string name="view_all" translatable="false">Xem tất cả</string>
    <string name="phone_invoice_header_items_label" translatable="false">Tên món</string>
    <string name="phone_invoice_header_price_label" translatable="false">ĐG</string>
    <string name="phone_invoice_header_quantity_label" translatable="false">SL</string>
    <string name="phone_invoice_header_amount_label" translatable="false">TT</string>
    <string name="day" translatable="false">Ngày</string>
    <string name="delete_posts" translatable="false">Xóa bài viết</string>
    <string name="edit_posts" translatable="false">Chỉnh sửa bài viết</string>
    <string name="default_image" translatable="false">Hình mặc định</string>
    <string name="friends" translatable="false">Bạn bè</string>
    <string name="title_reply" translatable="false">Trả lời</string>
    <string name="delete" translatable="false">Xoá</string>
    <string name="month" translatable="false">Tháng</string>
    <string name="year" translatable="false">Năm</string>
    <string name="choose_date" translatable="false">Chọn ngày sinh</string>
    <string name="search_friend" translatable="false">Tìm bạn bè</string>
    <string name="edit_content" translatable="false">Chỉnh sửa nội dung</string>
    <string name="copy_content" translatable="false">Sao chép nội dung</string>
    <string name="bottom_sheet_you_want_complete_post" translatable="false">Bạn muốn hoàn thành bài viết của mình sau?</string>
    <string name="bottom_sheet_save_post" translatable="false">Lưu thành bản nháp hoặc tiếp tục chỉnh sửa.</string>
    <string name="save_to_draft" translatable="false">Lưu làm bản nháp</string>
    <string name="you_will_received_message" translatable="false"> Bản nháp của bạn sẽ được lưu ở danh sách bản nháp</string>
    <string name="cancle_post" translatable="false">Bỏ bài viết</string>
    <string name="continue_edit" translatable="false">Tiếp tục chỉnh sửa</string>
    <string name="pinned_header_group" translatable="false">Ghim lên đầu nhóm trò chuyện</string>
    <string name="list_vote" translatable="false">Danh sách tin bình chọn</string>
    <string name="vote_lock" translatable="false">Khóa bình chọn</string>
    <string name="vote_reopen" translatable="false">Mở lại bình chọn</string>
    <string name="close" translatable="false">Đóng</string>
    <string name="title_warning_login" translatable="false">Cảnh báo đăng nhập từ thiết bị lạ!</string>
    <string name="title_warning_note" translatable="false"><b>CẢNH BÁO</b>: Nếu không phải bạn, hãy nhấn nút <b>khóa tài khoản khẩn cấp</b> đẻ bảo vệ tài khoản.</string>
    <string name="lock_account_urgent" translatable="false">Khóa tài khoản khẩn cấp</string>
    <string name="repost" translatabldelete_postse="false">Báo cáo</string>
    <string name="post_repost" translatabldelete_postse="false">Báo cáo bài viết</string>
</resources>