<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <vn.techres.line.widget.TechResTextView
            android:id="@+id/tvTitleChooseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/padding_15dp"
            android:text="@string/choose_date"
            android:textColor="@color/black"
            android:textSize="@dimen/font_huge"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="@dimen/size_20"
            android:layout_height="@dimen/size_20"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_15dp"
            android:contentDescription="@string/default_image"
            android:src="@drawable/ic_close_12dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_15dp"
        android:layout_marginEnd="@dimen/margin_15dp"
        android:layout_marginBottom="@dimen/margin_5dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <vn.techres.line.widget.TechResTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day"
            android:textColor="@color/blue_logo"
            android:textSize="@dimen/font_big" />

        <vn.techres.line.widget.TechResTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/month"
            android:textColor="@color/blue_logo"
            android:textSize="@dimen/font_big" />

        <vn.techres.line.widget.TechResTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/year"
            android:textColor="@color/blue_logo"
            android:textSize="@dimen/font_big" />
    </LinearLayout>

    <com.ycuwq.datepicker.date.DatePicker
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_15dp"
        android:layout_marginEnd="@dimen/margin_15dp"
        />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_15dp"
        android:background="@drawable/bg_button_orange_radius"
        android:text="@string/title_accept"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/font_large" />
</LinearLayout>