<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <vn.techres.line.widget.TechResTextViewBold
        android:id="@+id/tvQuestionDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/font_large"
        android:padding="@dimen/padding_16dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_0_5"
        android:background="@color/main_gray"/>
    <vn.techres.line.widget.TechResTextView
        android:id="@+id/tvPinnedHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/font_big"
        android:text="@string/pinned_header_group"
        android:padding="@dimen/padding_16dp"/>
    <vn.techres.line.widget.TechResTextView
        android:id="@+id/tvListVote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/list_vote"
        android:textSize="@dimen/font_big"
        android:padding="@dimen/padding_16dp"/>
    <vn.techres.line.widget.TechResTextView
        android:id="@+id/tvVoteLock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/font_big"
        android:text="@string/vote_lock"
        android:padding="@dimen/padding_16dp"/>
    <vn.techres.line.widget.TechResTextView
        android:id="@+id/tvVoteUnLock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/font_big"
        android:text="@string/vote_reopen"
        android:padding="@dimen/padding_16dp"/>
</LinearLayout>