<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_margin="@dimen/margin_10dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <vn.techres.line.widget.TechResTextView
                android:id="@+id/tvOrderCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:text="@string/title_code_orders"
                android:textSize="@dimen/font_huge"
                android:textStyle="bold"/>
            <vn.techres.line.widget.TechResTextView
                android:id="@+id/tvNameCustomerOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:text="@string/title_seller_name"
                android:textSize="@dimen/font_normal"
                />
            <vn.techres.line.widget.TechResTextView
                android:id="@+id/tvTimeOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:text="@string/hours_order"
                android:textSize="@dimen/font_normal"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <vn.techres.line.widget.TechResTextView
                android:id="@+id/tvProductPriceOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginBottom="@dimen/size_10"
                android:text="@string/title_price"
                android:textSize="@dimen/font_huge"/>
            <vn.techres.line.widget.TechResTextView
                android:id="@+id/tvStatusOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/title_order_status"
                android:textSize="@dimen/font_normal"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>