<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white_bg"
    app:cardCornerRadius="@dimen/size_8"
    android:layout_margin="@dimen/margin_16dp"
    >
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_large"
            android:textColor="@color/red"
            android:text="@string/title_warning_login"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tvWarningDevice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16dp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16dp"
            android:text="@string/title_warning_note"
            android:textColor="@color/black"
            />
        <Button
            android:id="@+id/btnLockAccount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_45"
            android:layout_marginTop="@dimen/margin_16dp"
            android:background="@drawable/background_radius_red_32dp"
            android:text="@string/lock_account_urgent"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/btnClose"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_45"
            android:background="@drawable/background_radius_gay_dim_32dp"
            android:text="@string/close"
            android:textColor="@color/main_gray_dim"
            android:layout_marginTop="@dimen/margin_8dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.cardview.widget.CardView>